--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
             <div class="star"></div>
         </div>
     </header>
+    <main class="main">
+        
+    </main>
 </body>
 </html>
